--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
@@ -130,7 +130,9 @@ spec:
                                   - name
                                 type: object
                               type: array
-                              x-kubernetes-list-type: set
+                              x-kubernetes-list-map-keys:
+                                - name
+                              x-kubernetes-list-type: map
                             limits:
                               additionalProperties:
                                 anyOf:
@@ -1118,7 +1120,9 @@ spec:
                                   - name
                                 type: object
                               type: array
-                              x-kubernetes-list-type: set
+                              x-kubernetes-list-map-keys:
+                                - name
+                              x-kubernetes-list-type: map
                             limits:
                               additionalProperties:
                                 anyOf:
@@ -1197,7 +1201,9 @@ spec:
                                   - name
                                 type: object
                               type: array
-                              x-kubernetes-list-type: set
+                              x-kubernetes-list-map-keys:
+                                - name
+                              x-kubernetes-list-type: map
                             limits:
                               additionalProperties:
                                 anyOf:
@@ -1267,7 +1273,9 @@ spec:
                                   - name
                                 type: object
                               type: array
-                              x-kubernetes-list-type: set
+                              x-kubernetes-list-map-keys:
+                                - name
+                              x-kubernetes-list-type: map
                             limits:
                               additionalProperties:
                                 anyOf:
@@ -1333,7 +1341,9 @@ spec:
                                   - name
                                 type: object
                               type: array
-                              x-kubernetes-list-type: set
+                              x-kubernetes-list-map-keys:
+                                - name
+                              x-kubernetes-list-type: map
                             limits:
                               additionalProperties:
                                 anyOf:
@@ -1375,7 +1385,9 @@ spec:
                                   - name
                                 type: object
                               type: array
-                              x-kubernetes-list-type: set
+                              x-kubernetes-list-map-keys:
+                                - name
+                              x-kubernetes-list-type: map
                             limits:
                               additionalProperties:
                                 anyOf:
@@ -1414,7 +1426,9 @@ spec:
                                   - name
                                 type: object
                               type: array
-                              x-kubernetes-list-type: set
+                              x-kubernetes-list-map-keys:
+                                - name
+                              x-kubernetes-list-type: map
                             limits:
                               additionalProperties:
                                 anyOf:
@@ -1471,7 +1485,9 @@ spec:
                                   - name
                                 type: object
                               type: array
-                              x-kubernetes-list-type: set
+                              x-kubernetes-list-map-keys:
+                                - name
+                              x-kubernetes-list-type: map
                             limits:
                               additionalProperties:
                                 anyOf:
@@ -1728,7 +1744,9 @@ spec:
                               - name
                             type: object
                           type: array
-                          x-kubernetes-list-type: set
+                          x-kubernetes-list-map-keys:
+                            - name
+                          x-kubernetes-list-type: map
                         limits:
                           additionalProperties:
                             anyOf:
@@ -1770,7 +1788,9 @@ spec:
                               - name
                             type: object
                           type: array
-                          x-kubernetes-list-type: set
+                          x-kubernetes-list-map-keys:
+                            - name
+                          x-kubernetes-list-type: map
                         limits:
                           additionalProperties:
                             anyOf:
@@ -1826,7 +1846,9 @@ spec:
                               - name
                             type: object
                           type: array
-                          x-kubernetes-list-type: set
+                          x-kubernetes-list-map-keys:
+                            - name
+                          x-kubernetes-list-type: map
                         limits:
                           additionalProperties:
                             anyOf:
@@ -1861,7 +1883,9 @@ spec:
                               - name
                             type: object
                           type: array
-                          x-kubernetes-list-type: set
+                          x-kubernetes-list-map-keys:
+                            - name
+                          x-kubernetes-list-type: map
                         limits:
                           additionalProperties:
                             anyOf:
