--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
@@ -135,7 +135,9 @@ spec:
                                   - name
                                 type: object
                               type: array
-                              x-kubernetes-list-type: set
+                              x-kubernetes-list-map-keys:
+                                - name
+                              x-kubernetes-list-type: map
                             limits:
                               additionalProperties:
                                 anyOf:
@@ -1123,7 +1125,9 @@ spec:
                                   - name
                                 type: object
                               type: array
-                              x-kubernetes-list-type: set
+                              x-kubernetes-list-map-keys:
+                                - name
+                              x-kubernetes-list-type: map
                             limits:
                               additionalProperties:
                                 anyOf:
@@ -1202,7 +1206,9 @@ spec:
                                   - name
                                 type: object
                               type: array
-                              x-kubernetes-list-type: set
+                              x-kubernetes-list-map-keys:
+                                - name
+                              x-kubernetes-list-type: map
                             limits:
                               additionalProperties:
                                 anyOf:
@@ -1272,7 +1278,9 @@ spec:
                                   - name
                                 type: object
                               type: array
-                              x-kubernetes-list-type: set
+                              x-kubernetes-list-map-keys:
+                                - name
+                              x-kubernetes-list-type: map
                             limits:
                               additionalProperties:
                                 anyOf:
@@ -1338,7 +1346,9 @@ spec:
                                   - name
                                 type: object
                               type: array
-                              x-kubernetes-list-type: set
+                              x-kubernetes-list-map-keys:
+                                - name
+                              x-kubernetes-list-type: map
                             limits:
                               additionalProperties:
                                 anyOf:
@@ -1380,7 +1390,9 @@ spec:
                                   - name
                                 type: object
                               type: array
-                              x-kubernetes-list-type: set
+                              x-kubernetes-list-map-keys:
+                                - name
+                              x-kubernetes-list-type: map
                             limits:
                               additionalProperties:
                                 anyOf:
@@ -1419,7 +1431,9 @@ spec:
                                   - name
                                 type: object
                               type: array
-                              x-kubernetes-list-type: set
+                              x-kubernetes-list-map-keys:
+                                - name
+                              x-kubernetes-list-type: map
                             limits:
                               additionalProperties:
                                 anyOf:
@@ -1476,7 +1490,9 @@ spec:
                                   - name
                                 type: object
                               type: array
-                              x-kubernetes-list-type: set
+                              x-kubernetes-list-map-keys:
+                                - name
+                              x-kubernetes-list-type: map
                             limits:
                               additionalProperties:
                                 anyOf:
@@ -1733,7 +1749,9 @@ spec:
                               - name
                             type: object
                           type: array
-                          x-kubernetes-list-type: set
+                          x-kubernetes-list-map-keys:
+                            - name
+                          x-kubernetes-list-type: map
                         limits:
                           additionalProperties:
                             anyOf:
@@ -1775,7 +1793,9 @@ spec:
                               - name
                             type: object
                           type: array
-                          x-kubernetes-list-type: set
+                          x-kubernetes-list-map-keys:
+                            - name
+                          x-kubernetes-list-type: map
                         limits:
                           additionalProperties:
                             anyOf:
@@ -1831,7 +1851,9 @@ spec:
                               - name
                             type: object
                           type: array
-                          x-kubernetes-list-type: set
+                          x-kubernetes-list-map-keys:
+                            - name
+                          x-kubernetes-list-type: map
                         limits:
                           additionalProperties:
                             anyOf:
@@ -1866,7 +1888,9 @@ spec:
                               - name
                             type: object
                           type: array
-                          x-kubernetes-list-type: set
+                          x-kubernetes-list-map-keys:
+                            - name
+                          x-kubernetes-list-type: map
                         limits:
                           additionalProperties:
                             anyOf:
