--- a/docs/zz_generated.kubermaticConfiguration.yaml
+++ b/docs/zz_generated.kubermaticConfiguration.yaml
@@ -489,20 +489,7 @@ spec:
           - v1.21
           - v1.20
     # ProviderIncompatibilities lists all the Kubernetes version incompatibilities
-    providerIncompatibilities:
-      - # Condition is the cluster or datacenter condition that must be met to block a specific version
-        condition: nonAMD64WithCanalAndIPVS
-        # Operation is the operation triggering the compatibility check (CREATE or UPDATE)
-        operation: UPGRADE
-        # Provider to which to apply the compatibility check.
-        # Empty string matches all providers
-        provider: ""
-        # Version is the Kubernetes version that must be checked. Wildcards are allowed, e.g. "1.22.*".
-        version: 1.23.*
-      - condition: nonAMD64WithCanalAndIPVS
-        operation: UPGRADE
-        provider: ""
-        version: 1.24.*
+    providerIncompatibilities: null
     # Updates is a list of available and automatic upgrades.
     # All 'to' versions must be configured in the version list for this orchestrator.
     # Each update may optionally be configured to be 'automatic: true', in which case the
