Add autoscaler support for Kubernetes 1.26
Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

--- a/addons/cluster-autoscaler/cluster-autoscaler.yaml
+++ b/addons/cluster-autoscaler/cluster-autoscaler.yaml
@@ -25,6 +25,9 @@
 {{ if eq .Cluster.MajorMinorVersion "1.25" }}
 {{ $version = "v1.25.0"}}
 {{ end }}
+{{ if eq .Cluster.MajorMinorVersion "1.26" }}
+{{ $version = "v1.26.1"}}
+{{ end }}
 
 {{ if not (eq $version "UNSUPPORTED") }}
 ---
