fixing lints and generating client Signed-off-by: Moath Qasim <moad.qassem@gmail.com>
Signed-off-by: Moath Qasim <moad.qassem@gmail.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
@@ -968,6 +968,8 @@ spec:
                             name:
                               description: Name represents the name of vSphere tag category that will be used to create and attach tags on VMS.
                               type: string
+                          required:
+                            - name
                           type: object
                         tags:
                           additionalProperties:
