--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
@@ -963,6 +963,8 @@ spec:
                             name:
                               description: Name represents the name of vSphere tag category that will be used to create and attach tags on VMS.
                               type: string
+                          required:
+                            - name
                           type: object
                         tags:
                           additionalProperties:
