[release/v2.21] Add keepalive-time setting for Konnectivity (#11786)
* Add keepalive-time setting for Konnectivity

Signed-off-by: Marcin Franczyk <marcin0franczyk@gmail.com>

* Minor update of comments & generated docs

Signed-off-by: Rastislav Szabo <rastislav@kubermatic.com>

* add result of verify-docs job

Signed-off-by: Marcin Franczyk <marcin0franczyk@gmail.com>

---------

Signed-off-by: Marcin Franczyk <marcin0franczyk@gmail.com>
Signed-off-by: Rastislav Szabo <rastislav@kubermatic.com>
Co-authored-by: Rastislav Szabo <rastislav@kubermatic.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
@@ -1675,12 +1675,17 @@ spec:
                         type: array
                     type: object
                   konnectivityProxy:
-                    description: KonnectivityProxy configures resources limits/requests
-                      for konnectivity-server sidecar.
+                    description: KonnectivityProxy configures konnectivity-server
+                      and konnectivity-agent components.
                     properties:
+                      keepaliveTime:
+                        description: KeepaliveTime represents a duration of time to
+                          check if the transport is still alive. The option is propagated
+                          to agents and server. Defaults to 1m.
+                        type: string
                       resources:
-                        description: ResourceRequirements describes the compute resource
-                          requirements.
+                        description: Resources configure limits/requests for Konnectivity
+                          components.
                         properties:
                           limits:
                             additionalProperties:
