--- a/pkg/applications/helmclient/testdata/examplechart/templates/configmap.yaml
+++ b/pkg/applications/helmclient/testdata/examplechart/templates/configmap.yaml
@@ -17,6 +17,7 @@ kind: ConfigMap
 metadata:
   name: testcm
   labels:
+    enableDNSLabel: {{ getHostByName "kubermatic.com"  | quote }}
 {{ if .Values.versionLabel }}
     versionLabel: {{ .Values.versionLabel | quote}}
 {{ end }}
