--- a/docs/zz_generated.kubermaticConfiguration.ee.yaml
+++ b/docs/zz_generated.kubermaticConfiguration.ee.yaml
@@ -552,11 +552,11 @@ spec:
       - condition: inTreeProvider
         operation: CREATE
         provider: openstack
-        version: '> 1.26.0'
+        version: '>= 1.26.0'
       - condition: inTreeProvider
         operation: UPGRADE
         provider: openstack
-        version: '> 1.26.0'
+        version: '>= 1.26.0'
     # Updates is a list of available and automatic upgrades.
     # All 'to' versions must be configured in the version list for this orchestrator.
     # Each update may optionally be configured to be 'automatic: true', in which case the
