Add inTreeProvider to KubermaticConfiguration enums
Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticconfigurations.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticconfigurations.yaml
@@ -520,6 +520,7 @@ spec:
                             enum:
                               - always
                               - externalCloudProvider
+                              - inTreeProvider
                             type: string
                           operation:
                             description: Operation is the operation triggering the compatibility check (CREATE or UPDATE)
