Add flag for share cluster in kubermatic settings CRD

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticsettings.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticsettings.yaml
@@ -112,6 +112,10 @@ spec:
                   type: boolean
                 enableOIDCKubeconfig:
                   type: boolean
+                enableShareCluster:
+                  default: true
+                  description: EnableShareCluster enables the Share Cluster feature for the user clusters.
+                  type: boolean
                 enableWebTerminal:
                   default: false
                   description: EnableWebTerminal enables the Web Terminal feature for the user clusters.
