Set configured NodePortRange in Cilium config
Signed-off-by: Rastislav Szabo <rastislav@kubermatic.com>

--- a/addons/cilium/cilium_v1.12.yaml
+++ b/addons/cilium/cilium_v1.12.yaml
@@ -171,6 +171,9 @@ data:
 {{ if eq .Cluster.Network.ProxyMode "ebpf" }}
   kube-proxy-replacement:  "strict"
   kube-proxy-replacement-healthz-bind-address: ""
+  {{ if ne .Cluster.Network.NodePortRange "" }}
+  node-port-range: {{ .Cluster.Network.NodePortRange | replace "-" "," | quote }}
+  {{ end }}
 {{ else }}
   kube-proxy-replacement:  "disabled"
 {{ end }}
