--- a/charts/backup/velero/crd/backups.yaml
+++ b/charts/backup/velero/crd/backups.yaml
@@ -1,4 +1,4 @@
-# This file has been generated with Velero v1.9.0. Do not edit.
+# This file has been generated with Velero v1.10.1. Do not edit.
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -33,8 +33,16 @@ spec:
             spec:
               description: BackupSpec defines the specification for a Velero backup.
               properties:
+                csiSnapshotTimeout:
+                  description: CSISnapshotTimeout specifies the time used to wait for CSI VolumeSnapshot status turns to ReadyToUse during creation, before returning error as timeout. The default value is 10 minute.
+                  type: string
+                defaultVolumesToFsBackup:
+                  description: DefaultVolumesToFsBackup specifies whether pod volume file system backup should be used for all volumes by default.
+                  nullable: true
+                  type: boolean
                 defaultVolumesToRestic:
-                  description: DefaultVolumesToRestic specifies whether restic should be used to take a backup of all pod volumes by default.
+                  description: "DefaultVolumesToRestic specifies whether restic should be used to take a backup of all pod volumes by default. Deprecated: this field is no longer used and will be removed entirely in future. Use DefaultVolumesToFsBackup instead."
+                  nullable: true
                   type: boolean
                 excludedNamespaces:
                   description: ExcludedNamespaces contains a list of namespaces that are not included in the backup.
@@ -277,7 +285,7 @@ spec:
                 orderedResources:
                   additionalProperties:
                     type: string
-                  description: OrderedResources specifies the backup order of resources of specific Kind. The map key is the Kind name and value is a list of resource names separated by commas. Each resource name has format "namespace/resourcename".  For cluster resources, simply use "resourcename".
+                  description: OrderedResources specifies the backup order of resources of specific Kind. The map key is the resource name and value is a list of object names separated by commas. Each resource name has format "namespace/objectname".  For cluster resources, simply use "objectname".
                   nullable: true
                   type: object
                 snapshotVolumes:
