--- a/charts/backup/velero/crd/downloadrequests.yaml
+++ b/charts/backup/velero/crd/downloadrequests.yaml
@@ -1,4 +1,4 @@
-# This file has been generated with Velero v1.9.0. Do not edit.
+# This file has been generated with Velero v1.10.1. Do not edit.
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -46,6 +46,8 @@ spec:
                         - BackupResourceList
                         - RestoreLog
                         - RestoreResults
+                        - CSIBackupVolumeSnapshots
+                        - CSIBackupVolumeSnapshotContents
                       type: string
                     name:
                       description: Name is the name of the kubernetes resource with which the file is associated.
