--- a/charts/backup/velero/crd/podvolumebackups.yaml
+++ b/charts/backup/velero/crd/podvolumebackups.yaml
@@ -1,4 +1,4 @@
-# This file has been generated with Velero v1.9.0. Do not edit.
+# This file has been generated with Velero v1.10.1. Do not edit.
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -38,9 +38,13 @@ spec:
           jsonPath: .spec.volume
           name: Volume
           type: string
-        - description: Restic repository identifier for this backup
+        - description: Backup repository identifier for this backup
           jsonPath: .spec.repoIdentifier
-          name: Restic Repo
+          name: Repository ID
+          type: string
+        - description: The type of the uploader to handle data transfer
+          jsonPath: .spec.uploaderType
+          name: Uploader Type
           type: string
         - description: Name of the Backup Storage Location where this backup should be stored
           jsonPath: .spec.backupStorageLocation
@@ -65,7 +69,7 @@ spec:
               description: PodVolumeBackupSpec is the specification for a PodVolumeBackup.
               properties:
                 backupStorageLocation:
-                  description: BackupStorageLocation is the name of the backup storage location where the restic repository is stored.
+                  description: BackupStorageLocation is the name of the backup storage location where the backup repository is stored.
                   type: string
                 node:
                   description: Node is the name of the node that the Pod is running on.
@@ -96,13 +100,20 @@ spec:
                       type: string
                   type: object
                 repoIdentifier:
-                  description: RepoIdentifier is the restic repository identifier.
+                  description: RepoIdentifier is the backup repository identifier.
                   type: string
                 tags:
                   additionalProperties:
                     type: string
                   description: Tags are a map of key-value pairs that should be applied to the volume backup as tags.
                   type: object
+                uploaderType:
+                  description: UploaderType is the type of the uploader to handle the data transfer.
+                  enum:
+                    - kopia
+                    - restic
+                    - ""
+                  type: string
                 volume:
                   description: Volume is the name of the volume within the Pod to be backed up.
                   type: string
