--- a/charts/backup/velero/crd/volumesnapshotlocations.yaml
+++ b/charts/backup/velero/crd/volumesnapshotlocations.yaml
@@ -1,4 +1,4 @@
-# This file has been generated with Velero v1.9.0. Do not edit.
+# This file has been generated with Velero v1.10.1. Do not edit.
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -14,6 +14,8 @@ spec:
     kind: VolumeSnapshotLocation
     listKind: VolumeSnapshotLocationList
     plural: volumesnapshotlocations
+    shortNames:
+      - vsl
     singular: volumesnapshotlocation
   scope: Namespaced
   versions:
@@ -37,6 +39,21 @@ spec:
                   additionalProperties:
                     type: string
                   description: Config is for provider-specific configuration fields.
+                  type: object
+                credential:
+                  description: Credential contains the credential information intended to be used with this location
+                  properties:
+                    key:
+                      description: The key of the secret to select from.  Must be a valid secret key.
+                      type: string
+                    name:
+                      description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names TODO: Add other useful fields. apiVersion, kind, uid?'
+                      type: string
+                    optional:
+                      description: Specify whether the Secret or its key must be defined
+                      type: boolean
+                  required:
+                    - key
                   type: object
                 provider:
                   description: Provider is the provider of the volume storage.
