--- a/charts/backup/velero/templates/daemonset.yaml
+++ b/charts/backup/velero/templates/daemonset.yaml
@@ -41,6 +41,7 @@ spec:
         args:
         - restic
         - server
+        - --uploader-type=restic
         {{- if .Values.velero.credentials.azure }}
         envFrom:
         - secretRef:
