--- a/addons/csi/azure-disk/rbac-csi-azuredisk-controller.yaml
+++ b/addons/csi/azure-disk/rbac-csi-azuredisk-controller.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-# Source: https://github.com/kubernetes-sigs/azuredisk-csi-driver/blob/v1.18.0/deploy/v1.18.0/rbac-csi-azuredisk-controller.yaml
+# Source: https://github.com/kubernetes-sigs/azuredisk-csi-driver/blob/v1.27.0/deploy/v1.27.0/rbac-csi-azuredisk-controller.yaml
 #
 
 {{ if .Cluster.Features.Has "externalCloudProvider" }}
@@ -23,10 +23,10 @@ kind: ServiceAccount
 metadata:
   name: csi-azuredisk-controller-sa
   namespace: kube-system
----
 
-kind: ClusterRole
+---
 apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
 metadata:
   name: azuredisk-external-provisioner-role
 rules:
@@ -57,10 +57,10 @@ rules:
   - apiGroups: ["coordination.k8s.io"]
     resources: ["leases"]
     verbs: ["get", "watch", "list", "delete", "update", "create", "patch"]
----
 
-kind: ClusterRoleBinding
+---
 apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
 metadata:
   name: azuredisk-csi-provisioner-binding
 subjects:
@@ -73,9 +73,8 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
 
 ---
-
-kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
 metadata:
   name: azuredisk-external-attacher-role
 rules:
@@ -97,10 +96,10 @@ rules:
   - apiGroups: ["coordination.k8s.io"]
     resources: ["leases"]
     verbs: ["get", "watch", "list", "delete", "update", "create", "patch"]
----
 
-kind: ClusterRoleBinding
+---
 apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
 metadata:
   name: azuredisk-csi-attacher-binding
 subjects:
@@ -113,9 +112,8 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
 
 ---
-
-kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
 metadata:
   name: azuredisk-external-snapshotter-role
 rules:
@@ -124,7 +122,7 @@ rules:
     verbs: ["list", "watch", "create", "update", "patch"]
   - apiGroups: [""]
     resources: ["secrets"]
-    verbs: ["get", "list"]
+    verbs: ["get"]
   - apiGroups: ["snapshot.storage.k8s.io"]
     resources: ["volumesnapshotclasses"]
     verbs: ["get", "list", "watch"]
@@ -137,10 +135,10 @@ rules:
   - apiGroups: ["coordination.k8s.io"]
     resources: ["leases"]
     verbs: ["get", "watch", "list", "delete", "update", "create", "patch"]
----
 
-kind: ClusterRoleBinding
+---
 apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
 metadata:
   name: azuredisk-csi-snapshotter-binding
 subjects:
@@ -151,10 +149,10 @@ roleRef:
   kind: ClusterRole
   name: azuredisk-external-snapshotter-role
   apiGroup: rbac.authorization.k8s.io
----
 
-kind: ClusterRole
+---
 apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
 metadata:
   name: azuredisk-external-resizer-role
 rules:
@@ -176,9 +174,10 @@ rules:
   - apiGroups: [""]
     resources: ["pods"]
     verbs: ["get", "list", "watch"]
+
 ---
-kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
 metadata:
   name: azuredisk-csi-resizer-role
 subjects:
@@ -191,8 +190,8 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
 
 ---
-kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
 metadata:
   name: csi-azuredisk-controller-secret-role
 rules:
@@ -201,8 +200,8 @@ rules:
     verbs: ["get", "list"]
 
 ---
-kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
 metadata:
   name: csi-azuredisk-controller-secret-binding
 subjects:
