--- a/addons/csi/azure-disk/rbac-csi-azuredisk-node.yaml
+++ b/addons/csi/azure-disk/rbac-csi-azuredisk-node.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-# Source: https://github.com/kubernetes-sigs/azuredisk-csi-driver/blob/v1.18.0/deploy/v1.18.0/rbac-csi-azuredisk-node.yaml
+# Source: https://github.com/kubernetes-sigs/azuredisk-csi-driver/blob/v1.27.0/deploy/v1.27.0/rbac-csi-azuredisk-node.yaml
 #
 
 {{ if .Cluster.Features.Has "externalCloudProvider" }}
@@ -25,21 +25,21 @@ metadata:
   namespace: kube-system
 
 ---
-kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
 metadata:
   name: csi-azuredisk-node-secret-role
 rules:
   - apiGroups: [""]
     resources: ["secrets"]
-    verbs: ["get", "list"]
+    verbs: ["get"]
   - apiGroups: [""]
     resources: ["nodes"]
     verbs: ["get"]
 
 ---
-kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
 metadata:
   name: csi-azuredisk-node-secret-binding
 subjects:
